<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".AppRecordingPath">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#fafafa">

		<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/note_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:padding="15dp"
			app:srcCompat="@drawable/baseline_save_alt_24"/>

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/note"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toEndOf="@id/note_btn"
			android:layout_marginStart="5dp"
			android:layout_marginEnd="5dp"
			android:layout_marginTop="18dp"
			android:text="@string/recording_note"
			android:textStyle="bold">
		</androidx.appcompat.widget.AppCompatTextView>

		<!--
		<View
			android:id="@+id/note_divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_below="@id/note_btn"
			android:background="@color/colorPrimaryLight"/>
			-->

		<ListView
			android:id="@+id/storageList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:divider="@color/colorAccent"
			android:dividerHeight="1dp"
			android:background="@drawable/listview_border"
			android:layout_below="@id/note_btn"/>

		<!--
		<View
			android:id="@+id/divider2"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_below="@+id/storageList"
			android:background="@color/colorPrimaryLight"/>
			-->

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/txtvSelectedFolderLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/storageList"
			android:layout_margin="5dp"
			android:text="@string/selected_folder"
			android:textStyle="bold">
		</androidx.appcompat.widget.AppCompatTextView>

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/txtvSelectedFolder"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/txtvSelectedFolderLabel"
			android:ellipsize="start"
			android:scrollHorizontally="true"
			android:textColor="@color/colorAccent"
			android:layoutDirection="ltr"
			android:layout_margin="5dp"/>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/openFolder"
			style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/txtvSelectedFolder"
			android:layout_marginStart="30dp"
			android:layout_marginEnd="30dp"
			android:text="@string/open_folder"
			android:textColor="@android:color/tab_indicator_text"
			app:backgroundTint="@android:color/transparent"
			app:cornerRadius="15dp"
			app:iconGravity="textStart"
			app:icon="@drawable/outline_folder_open_24"
			app:iconTint="@android:color/tab_indicator_text"
			app:rippleColor="@android:color/secondary_text_dark"
			app:strokeColor="@android:color/tab_indicator_text"
			app:strokeWidth="1dp" />

		<!--
			it causes crash in samsung n2 kitkat
			java.lang.NumberFormatException: Invalid int: "res/color/tab_indicator_text.xml"
			android:tint="@android:color/tab_indicator_text"

			android:background="@drawable/borderless_button"
			-->

		<View
			android:id="@+id/divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_below="@id/openFolder"
			android:background="?android:attr/listDivider"/>

	</RelativeLayout>

	<ListView
		android:id="@+id/directoryList"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layoutDirection="ltr"/>
	<!-- android:listSelector="@android:color/transparent" -->

</androidx.appcompat.widget.LinearLayoutCompat>